# crawl-data-lvn

./: README.md  main.py  pyproject.toml
.github/workflows/: document_detail_trigger.yml  document_list_trigger.yml
code/: extract_document_detail.py  extract_document_list.py  load_document_detail.py  load_document_list.py  temp1.py  temp3.py  temp7.py
code/crawler/: env.py
code/crawler/database/: config.py  models.py  service.py
code/crawler/spiders/: document_detail_spider.py  document_list_spider.py
code/crawler/utils/: .gitignore  auth.py
code/migrations/: env.py
code/migrations/versions/: a2b86d46369d_.py  da18f5e62be6_.py
