[project]
name = "crawl-data-lvn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "environs>=14.6.0",
    "google-api-python-client>=2.192.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "scrapy>=2.14.1",
    "scrapy-user-agents>=0.1.1",
    "sqlalchemy>=2.0.48",
]
